Enforce dependency convergence

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
                                 <banDuplicateClasses>
                                     <findAllDuplicates>true</findAllDuplicates>
                                 </banDuplicateClasses>
+                                <dependencyConvergence/>
                             </rules>
                             <fail>true</fail>
                         </configuration>
