--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
 
     <properties>
         <spring.version>4.3.3.RELEASE</spring.version>
-        <junit.version>4.12</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -35,7 +34,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
+                <version>4.12</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
